--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>test</title>
+    <link rel="stylesheet" href="styles/style.css" type="text/css"/>
 </head>
 <body>
-Kris
-<a href="liczby/index.html">zagraj se xd</a>
+<div id="background"></div>
+<video autoplay muted loop id="background-video">
+    <source src="images/bg.mp4" type="video/mp4">
+</video>
+<div id="main">
+    <img src="images/kris.png" width="256px" height="256px" style="border-radius: 50%; background-color: rgba(0,0,0,0.5)">
+</div>
+<div id="liczby">
+    <a href="other/liczby/index.html" target="_blank">Gra w liczby</a>
+</div>
 </body>
 </html>
