--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <source src="images/bg.mp4" type="video/mp4">
 </video>
 <div id="main">
-    <img src="images/kris.png" width="256px" height="256px" style="border-radius: 50%; background-color: rgba(0,0,0,0.5)">
+    <img id="kris" src="images/kris.png" width="256px" height="256px" style="border-radius: 50%; background-color: rgba(0,0,0,0.5)">
+    <a href="https://github.com/xKrisSx" target="_blank"><img id="git" src="images/git.svg" width="128px" height="128px" style="border-radius: 0%;"></a>
 </div>
 <div id="liczby">
     <a href="other/liczby/index.html" target="_blank">Gra w liczby</a>
