--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="https://github.com/xKrisSx" target="_blank"><img id="git" src="images/git.svg" width="128px" height="128px" style="border-radius: 0%;"></a>
 </div>
 <div id="liczby">
-    <a href="other/liczby/index.html" target="_blank">Gra w liczby</a>
+    <a href="games/liczby/index.html" target="_blank">Gra w liczby</a>
 </div>
 </body>
 </html>
