--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
 <div id="liczby">
     <a href="games/liczby/index.html" target="_blank">Gra w liczby</a>
 </div>
+<div id="clicker">
+    <a href="games/clicker/index.html" target="_blank">Mine of Three Rules</a>
+</div>
 </body>
 </html>
