--- a/games/liczby/index.html
+++ b/games/liczby/index.html
@@ -20,6 +20,11 @@
 <input type="range" id="numbercount" min="1" max="9" value="3" oninput="showAmount(this.value, `numbersize`)" onchange="showAmount(this.value, `numbersize`)">
 <div id="size" class="med">Ilosc cyfr: <span id="numbersize">3</span></div>
 
+<div id="boolhex" class="medsmaller">
+    Hexadecymalne?
+    <input type="checkbox" id="hexa" onclick="togglehexa()">
+</div>
+
 <div id="trybgryxd" class="med">
     Tryb gry:<br>
     <button id="gamemode" onclick="switchGamemode(); playSound(`pop`)" class="small">Kazdy osobno</button>
@@ -28,8 +33,9 @@
 <div id="rules" class="small">
     <div class="center">ZASADY:<br></div>
     - Na poczatku gry, dla kazdego gracza losowana jest <span id="rules-amount">3</span>-cyfrowa liczba<br>
+    <span id="hexainfo"></span>
     - Cyfry nie moga sie powtarzac<br>
-    - 0 (zero) nie wystepuje w liczbie (tylko 1-9)<br>
+    - 0 (zero) nie wystepuje w liczbie (tylko 1-<span id="maxnum">9</span>)<br>
     - Prawidlowa cyfra na <span class="red">niewlasciwym</span> miejscu = 1 punkt<br>
     - Prawidlowa cyfra na <span class="green">wlasciwym</span> miejscu = 2 punkty<br>
     - Wygrywa ten, kto zgadnie liczbe<br>
@@ -37,7 +43,7 @@
 <div class="small" id="bottom" onclick="window.open(`https://github.com/xKrisSx`)">
     <div>
     Tworca: Kris (Krystian K.)<br>
-    Wersja: 1.0
+    Wersja: 1.1
     </div>
 </div>
 </body>
