--- a/games/liczby/index.html
+++ b/games/liczby/index.html
@@ -22,7 +22,7 @@
 
 <div id="boolhex" class="medsmaller">
     Hexadecymalne?
-    <input type="checkbox" id="hexa" onclick="togglehexa()">
+    <input type="checkbox" id="hexa" onclick="togglehexa(); playSound(`pop`)">
 </div>
 
 <div id="trybgryxd" class="med">
