--- a/games/liczby/game.html
+++ b/games/liczby/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Gra</title>
+    <title>Gra w liczby</title>
     <script src="scripts/script.js"></script>
     <link rel="stylesheet" href="styles/style.css" type="text/css"/>
 </head>
