--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
     <a id="git" href="https://github.com/xKrisSx" target="_blank">
         <img class="img" src="images/git.svg" width="100px" style="border-radius: 50%;">
         <span class="text">Github</span>
-    </a>
+    </a> 
     <a id="yt" href="https://www.youtube.com/channel/UCkELcGLvB0EDsGPrY8lyOrw" target="_blank">
         <img class="img" src="images/youtube.png" width="100px" style="border-radius: 0%;">
         <span class="text" id>Youtube</span>
     </a>
-    <div class="hoverable" id="dc" onclick="copy('Kris#1842')">
+    <a id="dc" href="https://discord.gg/PHcw6S7J8q" target="_blank">
         <img class="img" src="images/discord.png" height="100px" style="border-radius: 50%;">
         <span class="text">Kris#1842</span>
-    </div>
-    <div class="hoverable" id="tg" onclick="copy('@not_kris')">
+    </a>
+    <a id="tg" href="https://t.me/not_kris" target="_blank">
         <img class="img" src="images/telegram.png" height="100px" style="border-radius: 50%;">
         <span class="text">@not_kris</span>
-    </div>
+    </a>
 </div>
 
 <div id="liczby">
