--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="images/kris.png">
     <script src="scripts/script.js"></script>
 </head>
-<body>
+<body onload="load()">
 
 <div id="background"></div>
 
@@ -21,19 +21,19 @@
 
 <div id="media">
     <a id="git" href="https://github.com/xKrisSx" target="_blank">
-        <img class="img" src="images/git.svg" width="100px" style="border-radius: 50%;">
+        <img class="img" id="gitimg" src="images/git.svg" width="100px" style="border-radius: 50%;">
         <span class="text">Github</span>
     </a>
     <a id="yt" href="https://www.youtube.com/channel/UCkELcGLvB0EDsGPrY8lyOrw" target="_blank">
-        <img class="img" src="images/youtube.png" width="100px" style="border-radius: 0%;">
+        <img class="img" id="ytimg" src="images/youtube.png" width="100px" style="border-radius: 0%;">
         <span class="text" id>Youtube</span>
     </a>
     <div class="hoverable" id="dc" onclick="copy('Kris#1842')">
-        <img class="img" src="images/discord.png" height="100px" style="border-radius: 50%;">
+        <img class="img" id="dcimg" src="images/discord.png" height="100px" style="border-radius: 50%;">
         <span class="text">Kris#1842</span>
     </div>
     <div class="hoverable" id="tg" onclick="copy('@not_kris')">
-        <img class="img" src="images/telegram.png" height="100px" style="border-radius: 50%;">
+        <img class="img" id="tgimg" src="images/telegram.png" height="100px" style="border-radius: 50%;">
         <span class="text">@not_kris</span>
     </div>
 </div>
