--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Kris</title>
     <link rel="stylesheet" href="styles/style.css" type="text/css"/>
     <link rel="icon" href="images/kris.png">
-    <script src="scripts/script.js"></script>
+    <script src="games/liczby/scripts/script.js"></script>
 </head>
-<body>
+<body onload="aaaa()">
 
 <div id="background"></div>
 
