--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Kris</title>
     <link rel="stylesheet" href="styles/style.css" type="text/css"/>
     <link rel="icon" href="images/kris.png">
-    <script src="games/liczby/scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </head>
 <body onload="aaaa()">
 
