--- a/index.html
+++ b/index.html
@@ -4,49 +4,42 @@
     <meta charset="UTF-8">
     <title>Kris</title>
     <link rel="stylesheet" href="styles/style.css" type="text/css"/>
+    <script src="scripts/script.js" defer></script>
     <link rel="icon" href="images/kris.png">
-    <script src="scripts/script.js"></script>
 </head>
-<body onload="aaaa()">
-
-<div id="background"></div>
-
-<video autoplay muted loop id="background-video">
-    <source src="images/bg.mp4" type="video/mp4">
-</video>
-
-<div id="main" class="tooltip">
+<body id="body" onload="dots(); background()">
+<div id="gradient"></div>
+<div id="main">
     <img id="kris" src="images/kris.png" width="256px" height="256px" style="border-radius: 50%; background-color: rgba(0,0,0,0.5)">
-</div>
+    <span id="kristekst">Krystian "Kris" K.</span>
 
-<div id="media">
-    <a id="git" href="https://github.com/xKrisSx" target="_blank">
-        <img class="img" id="gitimg" src="images/git.svg" width="100px" style="border-radius: 50%;">
-        <span class="text">Github</span>
-    </a>
-    <a id="yt" href="https://www.youtube.com/channel/UCkELcGLvB0EDsGPrY8lyOrw" target="_blank">
-        <img class="img" id="ytimg" src="images/youtube.png" width="100px" style="border-radius: 0%;">
-        <span class="text" id>Youtube</span>
-    </a>
-    <a id="dc" href="https://discord.gg/PHcw6S7J8q" target="_blank">
-        <img class="img" id="dcimg" src="images/discord.png" height="100px" style="border-radius: 50%;">
-        <span class="text">Kris#1842</span>
-    </a>
-    <a id="tg" href="https://t.me/not_kris" target="_blank">
-        <img class="img" id="tgimg" src="images/telegram.png" height="100px" style="border-radius: 50%;">
-        <span class="text">@not_kris</span>
-    </a>
+    <div id="media">
+        <a id="git" href="https://github.com/xKrisSx" target="_blank">
+            <img class="img" id="gitimg" src="images/git.svg" width="100px" style="border-radius: 50%;">
+            <span class="text">Github</span>
+        </a>
+        <a id="yt" href="https://www.youtube.com/channel/UCkELcGLvB0EDsGPrY8lyOrw" target="_blank">
+            <img class="img" id="ytimg" src="images/youtube.png" width="100px" style="border-radius: 0%;">
+            <span class="text">Youtube</span>
+        </a>
+        <a id="dc" href="https://discord.gg/PHcw6S7J8q" target="_blank">
+            <img class="img" id="dcimg" src="images/discord.png" height="100px" style="border-radius: 50%;">
+            <span class="text">Kris#1842</span>
+        </a>
+        <a id="tg" href="https://t.me/not_kris" target="_blank">
+            <img class="img" id="tgimg" src="images/telegram.png" height="100px" style="border-radius: 50%;">
+            <span class="text">@not_kris</span>
+        </a>
+    </div>
+    <div id="liczby">
+        <a href="games/liczby/index.html" target="_blank">Gra w liczby<img id="liczby-logo" src="images/liczby-logo.png"></a>
+    </div>
+    <div id="clicker">
+        <a href="games/clicker/index.html" target="_blank">Mine of Three Rules<img id="clicker-logo" src="images/motr-logo.png"></a>
+    </div>
+    <div id="sudoku">
+        <a href="games/sudoku/index.html" target="_blank">Sudoku (WORK IN PROGRESS)<img id="sudoku-logo" src="images/sudoku-logo.png"></a>
+    </div>
 </div>
-
-<div id="liczby">
-    <a href="games/liczby/index.html" target="_blank">Gra w liczby<img id="liczby-logo" src="images/liczby-logo.png"></a>
-</div>
-<div id="clicker">
-    <a href="games/clicker/index.html" target="_blank">Mine of Three Rules<img id="clicker-logo" src="images/motr-logo.png"></a>
-</div>
-<div id="sudoku">
-    <a href="games/sudoku/index.html" target="_blank">Sudoku (WORK IN PROGRESS)<img id="sudoku-logo" src="images/sudoku-logo.png"></a>
-</div>
-
 </body>
 </html>
