--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <div id="clicker">
         <a href="games/clicker/index.html" target="_blank">Mine of Three Rules<img id="clicker-logo" src="images/motr-logo.png"></a>
     </div>
-    <div id="sudoku">
+    <!--<div id="sudoku">
         <a href="games/sudoku/index.html" target="_blank">Sudoku (WORK IN PROGRESS)<img id="sudoku-logo" src="images/sudoku-logo.png"></a>
-    </div>
+    </div>-->
     <div id="kolory">
         <div class="blur" onclick="changeColor('random')"><img class="colorblock active" id="random" src="images/random.png"> RANDOM</div>
         <div class="blur" onclick="changeColor('0')"><img class="colorblock" id="red" src="images/red.png"> RED</div>
