--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <div id="media">
         <a id="git" href="https://github.com/xKrisSx" target="_blank">
             <img class="img" id="gitimg" src="images/git.svg" width="100px" style="border-radius: 50%;">
-            <span class="text">Github</span>
+            <span class="text">xKrisSx</span>
         </a>
         <a id="yt" href="https://www.youtube.com/channel/UCkELcGLvB0EDsGPrY8lyOrw" target="_blank">
             <img class="img" id="ytimg" src="images/youtube.png" width="100px" style="border-radius: 0%;">
-            <span class="text">Youtube</span>
+            <span class="text">Kris</span>
         </a>
         <a id="dc" href="https://discord.gg/PHcw6S7J8q" target="_blank">
             <img class="img" id="dcimg" src="images/discord.png" height="100px" style="border-radius: 50%;">
