--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <div class="blur" onclick="changeColor('1')"><img class="colorblock" id="green" src="images/green.png"> GREEN</div>
         <div class="blur" onclick="changeColor('2')"><img class="colorblock" id="blue" src="images/blue.png"> BLUE</div>
         <div class="blur" onclick="changeColor('3')"><img class="colorblock" id="yellow" src="images/yellow.png"> YELLOW</div>
+        <div class="blur" onclick="changeColor('4')"><img class="colorblock" id="gray" src="images/gray.png"> GRAY</div>
     </div>
 </div>
 </body>
