--- a/fizyka/index.html
+++ b/fizyka/index.html
@@ -41,6 +41,7 @@
             v0 - Prędkość fali - domyślnie 340m/s [w powietrzu]<br>
             v1 - Prędkość obiektu odbierającego fale<br>
             v2 - Prędkość obiektu wysyłającego fale<br>
+            vdiff - Różnica prędkości obiektów
         </div>
 
         <div id="output">
