--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </a>
         <a id="dc" href="https://discord.gg/PHcw6S7J8q" target="_blank">
             <img class="img" id="dcimg" src="images/discord.png" height="100px" style="border-radius: 50%;">
-            <span class="text">Kris#1842</span>
+            <span class="text">not.kris</span>
         </a>
         <a id="tg" href="https://t.me/not_kris" target="_blank">
             <img class="img" id="tgimg" src="images/telegram.png" height="100px" style="border-radius: 50%;">
