--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="scripts/script.js" defer></script>
     <link rel="icon" href="images/kris.png">
 </head>
-<body id="body" onload="enable(); dots(); background(); interval()">
+<body id="body" onload="enable(); dots(); background(); interval();">
 <div id="gradient"></div>
 <div id="main">
     <img id="kris" src="images/kris.png" width="256px" height="256px" style="border-radius: 50%; background-color: rgba(0,0,0,0.5)">
